--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,7 +59,7 @@ jobs:
       - name: Check if version changed
         id: version
         run: |
-          PUBLISHED=$(npm view @kyasms/sdk version 2>/dev/null || echo "0.0.0")
+          PUBLISHED=$(npm view @kya-sms/sdk version 2>/dev/null || echo "0.0.0")
           CURRENT=$(node -p "require('./package.json').version")
           if [ "$PUBLISHED" != "$CURRENT" ]; then
             echo "changed=true" >> $GITHUB_OUTPUT
